# studypilot

./: .gitignore  README.md  docker-compose.yml  doppler.yaml
backend/: .dockerignore  .env.example  Dockerfile  config.py  main.py  pyproject.toml
backend/agents/: canvas.py
backend/data/chroma/: chroma.sqlite3
backend/rag/: ingest.py  retrieve.py  seed.py
backend/rag/seed/: BAN5763 Spring 2026 Common Syllabus_Tentative_Updated.docx  Syllabus_MSIS-5663.docx
mcp/canvas/: .env.example  Dockerfile  README.md  pyproject.toml  server.py  utils.py
ui/: .dockerignore  .env.example  Dockerfile  app.py  pyproject.toml
ui/.streamlit/: config.toml
